# temporal-did

./: .gitignore  README.md  THEORY.md  pyproject.toml
.github/workflows/: tests.yml
examples/: quick_start.py
notebooks/: quickstart.md
tests/: test_diagnose.py  test_diagnostics.py
timing_mismatch/: __init__.py  classify.py  diagnostics.py  estimators.py  monte_carlo.py  plot.py
