[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timing-mismatch"
version = "0.1.0"
description = "Diagnose and handle temporal misalignment in historical difference-in-differences"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Qinnan Zhou" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
